fix jumping on mobile caused by use of dynamic height

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -21,7 +21,7 @@
   body {
     display: flex;
     flex-direction: column;
-    min-height: 100svh;
+    min-height: 100dvh;
   }
 
   ::backdrop {
